feat: added order schema, validations
