# Backend/src/routes/v1/order.routes.ts
@@ -1,9 +1,11 @@
 import { Router } from "express";
 import { createCheckoutSessionHandler, getOrdersHandler, stripeWebhookHandler } from "../../controllers/order.controller.js";
+import validateRequest from "../../middlewares/validateRequest.middleware.js";
+import { orderRequestSchema } from "../../schema/order.schema.js";
 
 const router = Router();
 
-router.route("/create-checkout-session").post(createCheckoutSessionHandler);
-router.route("/").get(getOrdersHandler);
+router.route("/payment/create-checkout-session").post(validateRequest(orderRequestSchema), createCheckoutSessionHandler);
+router.route("/all").get(getOrdersHandler);
 
 export default router;
